transicion de la camara layout en proceso

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="description">Description of the item</string>
     <string name="feed">Home</string>
     <string name="profile">Profile</string>
+    <string name="photoname">Type the name of the photo</string>
 
 
 </resources>
