--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,8 @@
     <string name="description">Description of the item</string>
     <string name="feed">Home</string>
     <string name="profile">Profile</string>
-    <string name="photoname">Type the name of the photo</string>
+    <string name="photoname">name</string>
+    <string name="namep">name</string>
 
 
 </resources>
