--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,33 +2,27 @@
 <resources>
 
     <string name="app_name">Sell It!</string>
-    <string name="reg">Register</string>
-    <string name="button_reg">Register</string>
-    <string name="type_name">Type username</string>
-    <string name="type_pass">Type password</string>
-    <string name="type_email">Type email</string>
     <string name="preferences">preferences</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="followers">Followers</string>
-    <string name="following">Following</string>
-    <string name="published">Published</string>
-    <string name="Watching">Watching</string>
-    <string name="price">Price</string>
-    <string name="buy">Buy it!</string>
-    <string name="description">Description of the item</string>
+    <string name="action_settings">Configuración</string>
+    <string name="followers">Seguidores</string>
+    <string name="following">Siguiendo</string>
+    <string name="published">Publicados</string>
+    <string name="Watching">Me interesan</string>
+    <string name="price">Precio</string>
+    <string name="buy">Comprar</string>
+    <string name="description">Descripción del producto</string>
     <string name="feed">Home</string>
-    <string name="profile">Profile</string>
+    <string name="profile">Perfil</string>
     <string name="photoname">name</string>
     <string name="namep">name</string>
-    <string name="preferencesText">Choose your preferences: </string>
-    <string name="sports">Sports</string>
-    <string name="clothes">Clothes</string>
-    <string name="kids">Kids</string>
-    <string name="beauty">Beauty</string>
-    <string name="books">Books</string>
-    <string name="tech">Technology</string>
-    <string name="jewelry">Jewelry</string>
-    <string name="agree">Agree</string>
+    <string name="preferencesText">Cuéntanos sobre tí, ¿Cuáles entre estas cosas te interesan?</string>
+    <string name="sports">Deportes</string>
+    <string name="clothes">Ropa</string>
+    <string name="kids">Niños</string>
+    <string name="beauty">Belleza</string>
+    <string name="books">Libros</string>
+    <string name="tech">Tecnología</string>
+    <string name="jewelry">Joyería</string>
+    <string name="agree">Aceptar</string>
 
 </resources>
